fix scrollbar issue with textarea

--- a/static/style.css
+++ b/static/style.css
@@ -31,6 +31,7 @@ textarea
     color: #000;
     resize: none;
     outline: none;
+    overflow-y: hidden;
 }
 
 /* Fonts */
